<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.pulham.petroleon9000.StationDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="StationName"
        android:id="@+id/station_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="StationLocation"
        android:id="@+id/station_vicinity"
        android:layout_below="@+id/station_name"
        android:layout_alignParentStart="true" />

    <!-- Petrol -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/petrol_label"
        android:id="@+id/petrol_label"
        android:background="#33cc33"
        android:textColor="#000000"
        android:layout_below="@+id/station_vicinity"
        android:layout_alignBaseline="@+id/petrol_edit"
        android:layout_alignParentStart="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is a price edit"
        android:id="@+id/petrol_edit"
        android:hint="@string/petrol_hint"
        android:layout_below="@+id/station_vicinity"
        android:layout_toEndOf="@+id/petrol_label"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/petrol_unit"
        android:id="@+id/petrol_ppl"
        android:layout_alignBaseline="@+id/petrol_edit"
        android:layout_toEndOf="@+id/petrol_edit" />

    <!-- Diesel -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/diesel_label"
        android:id="@+id/diesel_label"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:layout_alignBaseline="@+id/diesel_edit"
        android:layout_toStartOf="@+id/diesel_edit"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is a price edit"
        android:id="@+id/diesel_edit"
        android:hint="@string/diesel_hint"
        android:layout_below="@+id/petrol_edit"
        android:layout_alignStart="@+id/petrol_edit"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/diesel_unit"
        android:id="@+id/diesel_ppl"
        android:layout_alignBaseline="@+id/diesel_edit"
        android:layout_toEndOf="@+id/diesel_edit" />

    <!-- LPG -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lpg_label"
        android:id="@+id/lpg_label"
        android:background="#cccc00"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/lpg_edit"
        android:layout_toStartOf="@+id/lpg_edit"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is a price edit"
        android:id="@+id/lpg_edit"
        android:hint="@string/lpg_hint"
        android:layout_below="@+id/diesel_edit"
        android:layout_alignStart="@+id/diesel_edit"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lpg_unit"
        android:id="@+id/lpg_ppl"
        android:layout_alignBaseline="@+id/lpg_edit"
        android:layout_toEndOf="@+id/lpg_edit" />

    <!-- Save/Navigate buttons -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="saveStation" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_button"
        android:id="@+id/navigate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="startNavigation" />


</RelativeLayout>
