<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity">

    <TextView
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distance_spinner"
        android:text="@string/distance_label"
        android:id="@+id/distance_label" />

    <Spinner
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/distance_spinner"
        android:layout_toEndOf="@+id/distance_label"
        android:layout_toStartOf="@+id/search_button"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_label"
        android:id="@+id/search_button"
        android:layout_alignBaseline="@+id/distance_spinner"
        android:layout_alignParentEnd="true"
        android:onClick="searchButtonClicked" />

    <Button
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        android:id="@+id/details_button"
        android:layout_below="@+id/distance_spinner"
        android:layout_alignParentEnd="true"
        android:onClick="detailsButtonClicked" />

    <ToggleButton
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_mode"
        android:layout_below="@+id/distance_spinner"
        android:layout_alignParentStart="true"
        android:onClick="modeButtonClicked" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/details_button" />

</RelativeLayout>
